--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,13 @@
 {
   "manifest_version": 2,
   "name": "Octobox on GitHub",
+  "author": "Alex Ward (alxwrd@gmail.com)",
+  "homepage_url": "https://github.com/alxwrd/octobox-on-github",
   "version": "0.1",
   "description": "Navigates you to octobox.io when clicking github notifications.",
   "icons": {
-    "48": "icons/ocotobox-on-github-48.png",
-    "96": "icons/ocotobox-on-github-96.png"
+    "48": "icons/octobox-on-github-48.png",
+    "96": "icons/octobox-on-github-96.png"
   },
   "content_scripts": [
     {
